fixed bug with nav overflowing to the right

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,7 @@
 //  background: linear-gradient(to right, #8e9eab, #eef2f3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 * {
+  overflow-x: hidden;
   outline: none;
   box-sizing: border-box;
   margin: 0;
