--- a/styles/widescreen.scss
+++ b/styles/widescreen.scss
@@ -1,5 +1,8 @@
 @import './utils.scss';
-
+* {
+    overflow-x: hidden;
+  }
+  
 .littleHack{
     display: none;
 }
